# swaybar-ml

./: .gitignore  README.org  dune-project  flake.nix  manifest.scm  swaybar_ml.opam
lib/: battery_block.ml  block.ml  block.mli  clock_block.ml  dune  mpd_block.ml  swaybar.ml  weather_block.ml
test/: dune
