(library
 (inline_tests)
 (name swaybar_ml)
 (libraries
  eio
  eio_linux
  eio_main
  lwt_eio
  containers
  cmdliner
  yojson
  ppx_yojson_conv
  stringext
  obus
  obus.upower
  timedesc
  tls-eio
  cohttp
  cohttp-eio)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_string ppx_compare ppx_yojson_conv)))
